--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        # Update 'VARIANT' to pick a version of .NET: 7.0-bullseye, 8.0-jammy
-        VARIANT: "8.0-jammy"
+        # Update 'VARIANT' to pick a version of .NET: 6.0-focal, 7.0-bullseye
+        VARIANT: "6.0-focal"
         # Optional version of Node.js
         NODE_VERSION: "none"
 
