--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
       args:
         # Update 'VARIANT' to pick a version of .NET: 6.0-focal, 7.0-bullseye
-        VARIANT: "6.0-focal"
+        VARIANT: "6.0-bookworm"
         # Optional version of Node.js
         NODE_VERSION: "none"
 
@@ -26,7 +26,7 @@ services:
     # (Adding the "ports" property to this file will not forward from a Codespace.)
 
   db:
-    image: mcr.microsoft.com/mssql/server:2022-latest
+    image: mcr.microsoft.com/mssql/server:2019-latest
     platform: linux/amd64
     hostname: SQL-Library
     container_name: SQL-Library
