--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,7 +16,9 @@ jobs:
         uses: devcontainers/action@v1
         with:
           publish-templates: "true"
-
+          base-path-to-templates: "./src"
+          generate-docs: "true"
+          
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
