--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,9 +4,9 @@ on:
 
 jobs:
   deploy:
-    # permissions:
-    #   contents: write
-    #   pull-requests: write
+    permissions:
+      contents: write
+      pull-requests: write
     if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
     steps:
@@ -19,9 +19,6 @@ jobs:
           base-path-to-templates: "./src"
           generate-docs: "true"
           
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
       - name: Create a PR for Documentation
         id: push_image_info
         env:
@@ -31,8 +28,8 @@ jobs:
           echo "Start."
 
           # Configure git and Push updates
-          git config --global user.email github-actions[bot]@users.noreply.github.com
-          git config --global user.name github-actions[bot]
+          git config --global user.email github-actions@github.com
+          git config --global user.name github-actions
           git config pull.rebase false
 
           branch=automated-documentation-update-$GITHUB_RUN_ID
@@ -46,5 +43,12 @@ jobs:
           # Push
           if [ "$NO_UPDATES" != "true" ] ; then
               git push origin "$branch"
-              gh pr create --title "$message" --body "$message"
+              gh api \
+                --method POST \
+                -H "Accept: application/vnd.github+json" \
+                /repos/${GITHUB_REPOSITORY}/pulls \
+                -f title="$message" \
+              -f body="$message" \
+              -f head="$branch" \
+              -f base='main'
           fi
