--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,9 +16,10 @@ jobs:
         uses: devcontainers/action@v1
         with:
           publish-templates: "true"
+          base-path-to-templates: "./src"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
+
       - name: Create a PR for Documentation
         id: push_image_info
         env:
