--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,6 +5,7 @@ on:
 jobs:
   deploy:
     permissions:
+      packages: write
       contents: write
       pull-requests: write
     if: ${{ github.ref == 'refs/heads/main' }}
