--- a/src/dotnet/.devcontainer/devcontainer.json
+++ b/src/dotnet/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. 
-// For config options, see the README at: https://github.com/microsoft/azuresql-devcontainers/tree/main/src/dotnet-aspire
+// For config options, see the README at: https://github.com/microsoft/azuresql-devcontainers/tree/main/src/dotnet
 {
-	"name": ".NET with Aspire and Azure SQL",
+	"name": ".NET and Azure SQL",
 	"dockerComposeFile": "docker-compose.yml",
 	"service": "app",
 	"workspaceFolder": "/workspace",
@@ -44,7 +44,6 @@
 	"postCreateCommand": "bash .devcontainer/sql/postCreateCommand.sh 'database/Library/bin/Debug'",
 
 	// Post start commands to run after the container is started.
-	
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
@@ -62,5 +61,4 @@
 	}
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
-
 }
