--- a/src/javascript-node/.devcontainer/Dockerfile
+++ b/src/javascript-node/.devcontainer/Dockerfile
@@ -5,7 +5,7 @@ FROM mcr.microsoft.com/devcontainers/javascript-node:1-${templateOption:imageVar
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends software-properties-common
 
-# Install SQL Tools: SQLPackage, sqlcmd and more
+# Install SQL Tools: SQLPackage, sqlcmd and drivers
 COPY sql/installSQLtools.sh installSQLtools.sh
 RUN bash ./installSQLtools.sh \
      && apt-get clean -y && rm -rf /var/lib/apt/lists/* /tmp/library-scripts
