Updating OS for Node.js template, updating README according to Acrolinx recommendations.

--- a/src/javascript-node/devcontainer-template.json
+++ b/src/javascript-node/devcontainer-template.json
@@ -18,7 +18,7 @@
                 "18-bookworm",
                 "18-bullseye"
             ],
-            "default": "22-bookworm"
+            "default": "22-bullseye"
         }
     },
     "platforms": [
