--- a/src/python/.vscode/tasks.json
+++ b/src/python/.vscode/tasks.json
@@ -4,7 +4,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Execute SQL Query",
+            "label": "Verify database schema and data",
             "type": "shell",
             "command": "code",
             "args": [
@@ -32,11 +32,6 @@
                 ".devcontainer/sql/postCreateCommand.sh",
                 "database/Library/bin/Debug"
             ]
-        },
-        {
-            "label": "Trust .NET HTTPS certificate",
-            "type": "shell",
-            "command": "dotnet dev-certs https --trust"
         }
     ]
 }
