--- a/src/dotnet/.devcontainer/devcontainer.json
+++ b/src/dotnet/.devcontainer/devcontainer.json
@@ -22,7 +22,7 @@
 						"trustServerCertificate": true
 					}
 				],
-				"sqlDatabaseProjects.dotnetSDK Location": "/usr/share/dotnet/sdk/"
+				"sqlDatabaseProjects.dotnetSDK Location": "/usr/share/dotnet"
 			},
 			// Add the IDs of extensions you want installed when the container is created.
 			"extensions": [
