--- a/src/dotnet-aspire/.devcontainer/docker-compose.yml
+++ b/src/dotnet-aspire/.devcontainer/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     # (Adding the "ports" property to this file will not forward from a Codespace.)
 
   db:
-    image: mcr.microsoft.com/mssql/server:2022-latest
+    image: mcr.microsoft.com/azure-sql-edge
     hostname: SQL-Library
     container_name: SQL-Library
     restart: unless-stopped
