--- a/src/dotnet-aspire/devcontainer-template.json
+++ b/src/dotnet-aspire/devcontainer-template.json
@@ -1,6 +1,6 @@
 {
     "id": "dotnet-aspire",
-    "version": "1.1.0",
+    "version": "1.2.0",
     "name": ".NET with Aspire and Azure SQL",
     "description": "A development environment for .NET Aspire and Azure SQL, enabling streamlined local development and testing.",
     "documentationURL": "https://github.com/microsoft/azuresql-devcontainers/tree/main/src/dotnet-aspire",
@@ -12,8 +12,7 @@
             "description": ".NET version:",
             "proposals": [
                 "8.0-bookworm",
-                "8.0-jammy",
-                "8.0-bullseye"
+                "8.0-jammy"
             ],
             "default": "8.0-bookworm"
         }
