--- a/src/dotnet/devcontainer-template.json
+++ b/src/dotnet/devcontainer-template.json
@@ -1,6 +1,6 @@
 {
     "id": "dotnet",
-    "version": "1.1.0",
+    "version": "1.2.0",
     "name": ".NET and Azure SQL",
     "description": "A development environment for .NET and Azure SQL, enabling streamlined local development and testing.",
     "documentationURL": "https://github.com/microsoft/azuresql-devcontainers/tree/main/src/dotnet",
@@ -12,8 +12,7 @@
             "description": ".NET version:",
             "proposals": [
                 "8.0-bookworm",
-                "8.0-jammy",
-                "8.0-bullseye"
+                "8.0-jammy"
             ],
             "default": "8.0-bookworm"
         }
